[package]
name = "wasp-input"
version = "0.1.0"
edition = "2021"
description = "wasp-input"

[lib]
name = "waspinput"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
windows = { version = "0.61", features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]}
lazy_static = "1.4"